clang/test/BSC/Negative/Generic/Typealias/typealias_trait/typealias_trait.cbs
// RUN: %clang_cc1  -verify %s

_Trait F {
    int foo(This* this);
};
typedef MyF = _Trait F;
_Impl MyF for int;  //expected-error{{function 'foo' in 'MyF' (aka '_Trait F') is not implemented for 'int'}}

_Trait G<T> {
    T foo(This* this);
};
typedef MyG1 = _Trait G<int>;
_Impl MyG1 for int;  //expected-error{{function 'foo' in 'MyG1' (aka 'G<int>') is not implemented for 'int'}}
typedef MyG2<T> = _Trait G<T>;
_Impl MyG2<int> for int;  //expected-error{{function 'foo' in 'MyG2<int>' (aka 'G<int>') is not implemented for 'int'}}
_Impl MyG2<T> for int;  //expected-error{{use of undeclared identifier 'T'}}

int main() {
    return 0;
}